--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,11 @@
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
         "axios": "^0.24.0",
+        "flowbite": "^1.5.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.6",
-        "react-router-dom": "^6.2.1",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "redux": "^4.1.2",
         "redux-devtools-extension": "^2.13.9",
